--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -57,6 +57,22 @@ button {
   padding: 0 auto;
 }
 
+.title {
+  font-family: "spase-age";
+  padding: 100px 0;
+  font-size: 48px;
+  line-height: 48px;
+  font-weight: 400;
+}
+
+.button {
+  text-transform: uppercase;
+  border: 1px solid #fff;
+  font-size: 18px;
+  line-height: 21px;
+  padding: 20px 45px;
+}
+
 .header {
   background-image: url(../images/header-bg.jpg);
   background-position: center;
@@ -159,4 +175,88 @@ button {
 
 .header-descr-text + .header-descr-text {
   margin-left: 52px;
+}
+
+.about {
+  background-image: url(../images/about-bg.jpg);
+}
+
+.about-item {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 150px;
+  flex-wrap: wrap;
+}
+
+.about-item:nth-child(odd) {
+  flex-direction: row-reverse;
+}
+
+.about-img {
+  max-width: 100%;
+}
+
+.about-content {
+  width: 600px;
+}
+
+.about-content-title {
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 700;
+  margin-bottom: 5px;
+}
+
+.about-content-subtitle {
+  font-size: 12px;
+  line-height: 14px;
+  font-weight: 400;
+  color: #036cca;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+}
+
+.about-content-text {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+
+.about-content-text p {
+  width: 165px;
+}
+
+.about-table {
+  margin-bottom: 50px;
+}
+
+.about-table-caption {
+  caption-side: bottom;
+  text-align: left;
+  margin-top: 20px;
+  font-size: 12px;
+  line-height: 14px;
+}
+
+.about-table-tr {
+  border: 1px solid #fff;
+  border-left: none;
+  border-right: none;
+}
+
+.about-table-tr + .about-table-tr {
+  font-size: 36px;
+  line-height: 43px;
+  font-weight: 400;
+  text-align: center;
+}
+
+.about-table-td {
+  padding: 10px 30px 10px 0;
+}
+
+.about-table-td span {
+  font-size: 14px;
+  line-height: 17px;
+  display: block;
 }
