--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -179,6 +179,9 @@ button {
 
 .about {
   background-image: url(../images/about-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .about-item {
@@ -259,4 +262,137 @@ button {
   font-size: 14px;
   line-height: 17px;
   display: block;
+}
+
+.how {
+  background-image: url(../images/how-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
+  padding-bottom: 100px;
+}
+
+.how-box {
+  text-align: center;
+}
+
+.how-box circle,
+.how-box text,
+foreignObject {
+  transition: all 0.5s;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.how-box g:hover circle {
+  r: 20px;
+  fill: #036cca;
+}
+
+.how-box g:hover text {
+  font-size: 36px;
+  fill: #036cca;
+}
+
+foreignObject {
+  text-align: left;
+  font-size: 18px;
+}
+
+.how-box g:hover foreignObject {
+  font-size: 22px;
+  color: #036cca;
+}
+
+.to-book {
+  background-image: url(../images/to-book-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
+  min-height: 100vh;
+}
+
+.to-book-inner {
+  display: flex;
+  justify-content: space-between;
+}
+
+.to-book-text {
+  width: 165px;
+  font-size: 14px;
+  line-height: 17px;
+  margin-right: 52px;
+  margin-top: 100px;
+}
+
+.to-book-text + .to-book-text {
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.info {
+  background-image: url(../images/info-bg.jpg);
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 100px;
+}
+
+.special-offer-inner {
+  display: flex;
+  justify-content: space-between;
+}
+
+.special-offer-item {
+  width: 500px;
+}
+
+.special-offer-item-box {
+  min-height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border: 1px solid #fff;
+  margin-bottom: 25px;
+  padding: 40px 75px;
+  text-align: center;
+}
+
+.special-offer-item-text {
+  font-size: 24px;
+  line-height: 29px;
+  width: 236px;
+  margin: 0 auto;
+}
+
+.special-offer-item-text span {
+  color: #cb0e0e;
+}
+
+.special-offer-price-old {
+  text-align: right;
+  font-size: 14px;
+  line-height: 17px;
+  margin-bottom: 16px;
+  position: relative;
+}
+
+.special-offer-price-old::before {
+  content: "";
+  position: absolute;
+  width: 68px;
+  height: 1px;
+  background-color: #cb0e0e;
+  top: 7px;
+  right: 0;
+  transform: rotate(15deg);
+}
+
+.special-offer-price-new {
+  font-size: 48px;
+  line-height: 57px;
+}
+
+.special-offer-btn {
+  width: 100%;
 }
