--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -701,6 +701,9 @@ responsive//////////////////////////////////////////
 --------------------------------------------------*/
 
 @media (max-width: 1160px) {
+  .container {
+    margin: 0 10px;
+  }
   .about,
   .how,
   .to-book,
@@ -775,6 +778,28 @@ responsive//////////////////////////////////////////
 
   .to-book-text + .to-book-text {
     margin: 0 auto 30px auto;
+  }
+
+  .contacts-inner {
+    display: block;
+  }
+
+  .contacts-box {
+    width: 90%;
+  }
+
+  .contacts-garantees {
+    width: 90%;
+  }
+
+  .contacts-responsive {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .contacts-garantees-img {
+    width: 50vw;
+    height: 100%;
   }
 }
 
@@ -982,6 +1007,43 @@ responsive//////////////////////////////////////////
   .to-book {
     background-position: top left;
   }
+
+  .contacts-garantees-text {
+    font-size: 20px;
+    line-height: 24px;
+  }
+}
+
+@media (max-width: 570px) {
+  .footer-inner {
+    display: block;
+  }
+
+  .footer-text {
+    width: 90%;
+    margin-right: 0;
+  }
+
+  .footer-text p + p {
+    margin-top: 10px;
+    margin-bottom: 30px;
+  }
+
+  .footer-menu,
+  .footer-links {
+    width: 90%;
+    margin-right: 0;
+  }
+
+  .footer-menu {
+    margin-bottom: 50px;
+  }
+
+  .footer {
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 50px;
+  }
 }
 
 @media (max-width: 480px) {
@@ -989,9 +1051,18 @@ responsive//////////////////////////////////////////
     font-size: 28px;
     line-height: 28px;
   }
+
+  .contacts-garantees-text {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
 
 @media (max-width: 360px) {
+  .title {
+    font-size: 20px;
+    line-height: 20px;
+  }
   .header-top {
     flex-wrap: wrap;
   }
@@ -1024,5 +1095,78 @@ responsive//////////////////////////////////////////
     font-size: 16px;
     line-height: 24px;
     width: 100%;
+  }
+
+  .how-box-item:hover {
+    font-size: 18px;
+  }
+
+  .to-book-text {
+    font-size: 12px;
+  }
+
+  .special-offer-item-box {
+    min-height: 300px;
+    padding: 20px 35px;
+  }
+
+  .special-offer-item-text {
+    font-size: 18px;
+    line-height: 22px;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  .special-offer-price-new {
+    font-size: 38px;
+  }
+
+  .services {
+    padding-bottom: 100px;
+  }
+
+  .services-box-list {
+    margin: 0 auto 125px;
+  }
+
+  .services-box-list {
+    font-size: 16px;
+    line-height: 24px;
+    text-align: left;
+  }
+
+  .services-list-item::before {
+    width: 15px;
+    height: 15px;
+  }
+
+  .services-buttons {
+    width: 100%;
+  }
+
+  .button {
+    font-size: 14px;
+    line-height: 17px;
+    padding: 20px 25px;
+  }
+
+  .services-btn--first {
+    margin-bottom: 25px;
+  }
+
+  .slider-inner {
+    margin-bottom: 25px;
+    padding: 50px 0;
+  }
+
+  .slider-descr {
+    font-size: 14px;
+    line-height: 18px;
+  }
+
+  .slider-inner {
+    margin-bottom: 25px;
+    border: 1px solid #fff;
+    padding: 50px 0;
   }
 }
